--- a/WebInterface/Video/main.css
+++ b/WebInterface/Video/main.css
@@ -75,6 +75,7 @@ h4 {
 }
 
 hr {
+	margin: 0;
 	border: none;
 	border-bottom: 1px lightgray solid;
 }
@@ -102,3 +103,104 @@ a:hover {
 }
 
 /* Identifiers */
+main {
+	display: flex;
+	margin-top: 20px;
+}
+
+main > div {
+	flex: 1;
+}
+
+main > div:first-child {
+	flex-grow: 2;
+}
+
+main > div:last-child {
+	background-color: rgba(22, 160, 133, 0.2);
+}
+
+main > div:last-child button {
+	margin: 0;
+	width: 100%;
+	border: none;
+	cursor: pointer;
+	text-align: left;
+	overflow: hidden;
+	padding: 10px 5px;
+	text-overflow: ellipsis;
+	background-color: transparent;
+	transition: background-color .3s ease;
+
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+
+main > div:last-child button:hover {
+	background-color: rgba(0, 0, 0, 0.15);
+}
+
+main #player {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	position: relative;
+	background-color: darkgray;
+}
+
+main #player #videoElem {
+	width: 100%;
+	height: 40vw;
+	background-color: gray;
+}
+
+main #player #videoElem video {
+	width: 100%;
+	height: 100%;
+}
+
+main #player #controls {
+	left: 0px;
+	bottom: 0px;
+	width: 100%;
+	height: 40px;
+	position: absolute;
+	background-color: #16a085;
+	transform: translateY(105%);
+	transition: transform .3s ease;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+main #player:hover #controls {
+	transform: translateY(0px);
+}
+
+main #player #controls button {
+	height: 100%;
+	border: none;
+	cursor: pointer;
+	position: relative;
+	background-color: transparent;
+}
+
+main #player #controls button:before {
+	opacity: 0;
+	width: 40px;
+	height: 40px;
+	content: ' ';
+	display: block;
+	position: absolute;
+	border-radius: 100%;
+	background-color: black;
+	transition: opacity .5s ease;
+	transform: translate(-20%, -20%);
+}
+
+main #player #controls button:hover:before {
+	opacity: 0.15;
+}
+
+main #player #controls > div {
+	height: 100%;
+}
