--- a/WebInterface/Audio/main.css
+++ b/WebInterface/Audio/main.css
@@ -257,6 +257,29 @@ main #controls #mainControls div#left {
 	padding-left: 10px;
 }
 
+main #controls #mainControls div#left #volumePopUp {
+	left: 120px;
+	width: 20px;
+	bottom: 50px;
+	padding: 20px;
+	height: 150px;
+	z-index: 1000;
+	display: none;
+	position: fixed;
+	background-color: white;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+main #controls #mainControls div#left #volumePopUp > button {
+	left: 20%;
+	bottom: 5px;
+	position: absolute;
+}
+
+main #controls #mainControls div#left #volumeSlider {
+	transform: rotate(-90deg) translate(-30%, -260%);
+}
+
 main #controls #mainControls div#right {
 	float: right;
 	padding-right: 10px;
