--- a/WebInterface/Audio/main.css
+++ b/WebInterface/Audio/main.css
@@ -131,6 +131,9 @@ main #main div > span {
 
 main #main div > select {
 	float: right;
+	border: none;
+	padding: 2px;
+	cursor: pointer;
 }
 
 main #main button {
