--- a/WebInterface/Audio/main.css
+++ b/WebInterface/Audio/main.css
@@ -115,6 +115,10 @@ body #lyricsElem {
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
 }
 
+body #lyricsElem p {
+	text-align: left;
+}
+
 body #lyricsElem .ball-scale-multiple {
 	width: 60px;
 	height: 60px;
