--- a/WebInterface/Video/main.css
+++ b/WebInterface/Video/main.css
@@ -275,6 +275,28 @@ main #player #autoplay #autoplay-time {
 	transition: transform 1s linear;
 }
 
+main #player #video-time-jump {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	align-items: center;
+}
+
+main #player #video-time-jump img {
+	top: 50%;
+	left: 50%;
+	opacity: 0;
+	width: 5vw;
+	height: 5vw;
+	padding: 10px;
+	position: absolute;
+	border-radius: 100%;
+	will-change: opacity;
+	transform: translate(-50%, -50%);
+	background-color: rgba(0, 0, 0, 0.6);
+
+}
+
 main #player #video-settings {
 	top: 5%;
 	left: 5%;
