--- a/WebInterface/Audio/main.css
+++ b/WebInterface/Audio/main.css
@@ -104,9 +104,9 @@ a:hover {
 /* Identifiers */
 body #lyricsElem {
 	right: 55px;
+	width: 25vw;
+	height: 25vw;
 	z-index: 100;
-	width: 150px;
-	height: 150px;
 	bottom: 127px;
 	position: fixed;
 	overflow-y: scroll;
@@ -117,12 +117,59 @@ body #lyricsElem {
 
 body #lyricsElem p {
 	text-align: left;
+	overscroll-behavior: none;
 }
 
 body #lyricsElem .ball-scale-multiple {
 	width: 60px;
 	height: 60px;
 	transform: translateX(110%);
+}
+
+body #saveMenu {
+	width: 100%;
+	height: 100%;
+	z-index: 100;
+	display: none;
+	position: fixed;
+	align-items: center;
+	pointer-events: all;
+	justify-content: center;
+	overscroll-behavior: none;
+}
+
+body #saveMenu:before {
+	top: 0;
+	left: 0;
+	z-index: -1;
+	width: 100%;
+	height: 100%;
+	content: ' ';
+	opacity: 0.3;
+	position: fixed;
+	background-color: black;
+}
+
+body #saveMenu > div {
+	top: 50%;
+	left: 50%;
+	width: 50%;
+	height: auto;
+	padding: 5% 5%;
+	max-width: 500px;
+	position: absolute;
+	background-color: white;
+	transform: translate(-50%, -50%);
+	box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+}
+
+body #saveMenu > div button {
+	color: white;
+	border: none;
+	cursor: pointer;
+	padding: 5px 10px;
+	border-radius: 20px;
+	background-color: #16a085;
 }
 
 main #main {
@@ -219,6 +266,24 @@ main #main div div button:hover {
 main #main #queueContainer #queue button {
 	display: flex;
 	overflow: hidden;
+}
+
+main #main #queueContainer #queue button.tmpBtn {
+	width: 70%;
+	color: white;
+	margin: auto;
+	margin-top: 10%;
+	max-width: 150px;
+	font-size: 0.7em;
+	padding: 5px 10px;
+	text-align: center;
+	border-radius: 20px;
+	white-space: pre-wrap;
+	background-color: #16a085;
+}
+
+main #main #queueContainer #queue button.tmpBtn:last-child {
+	margin-top: 5%;
 }
 
 main #main #queueContainer #queue button span {
@@ -405,4 +470,11 @@ main #fab {
 main #fab:hover {
 	transform: translateY(-5%);
 	box-shadow: 0 8px 10px rgba(0, 0, 0, 0.3);
+}
+
+
+@media only screen and (max-width: 700px) {
+	main #main button {
+		padding: 0 2%;
+	}
 }
