--- a/WebInterface/Audio/main.css
+++ b/WebInterface/Audio/main.css
@@ -268,6 +268,11 @@ main #main #queueContainer #queue button {
 	overflow: hidden;
 }
 
+main #main #queueContainer #queue button[active] {
+	color: white;
+	background-color: #12876f;
+}
+
 main #main #queueContainer #queue button.tmpBtn {
 	width: 70%;
 	color: white;
