--- a/WebInterface/all.css
+++ b/WebInterface/all.css
@@ -1,3 +1,7 @@
+body {
+	font-family: "Roboto", "Segoe UI", "Ubuntu", -apple-system, system-ui, BlinkMacSystemFont, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 header {
 	z-index: 10;
 	width: 100%;
