--- a/WebInterface/Audio/main.css
+++ b/WebInterface/Audio/main.css
@@ -1,17 +1,6 @@
 /* reset */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -19,58 +8,62 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 body {
 	line-height: 1;
 }
+
 ol, ul {
 	list-style: none;
 }
+
 blockquote, q {
 	quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
+
+blockquote:before, blockquote:after, q:before, q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
 
 /* Main */
 
 body {
 	top: 0;
 	left: 0;
-	width:100%;
-	height:100%;
-	text-align:center;
+	width: 100%;
+	height: 100%;
+	text-align: center;
 	position: absolute;
 }
 
 h1 {
-	padding:2%;
-	font-size:250%;
+	padding: 2%;
+	font-size: 250%;
 }
 
 h2 {
-	padding:2%;
-	font-size:200%;
+	padding: 2%;
+	font-size: 200%;
 }
 
 h3 {
-	font-size:150%;
+	font-size: 150%;
 }
 
 h4 {
-	font-size:100%;
+	font-size: 100%;
 }
 
 hr {
@@ -88,19 +81,19 @@ b {
 
 a {
 	color: #FFFFFF;
-	cursor:pointer;
-	text-decoration:none;
-
-	-webkit-transition:all .5s;
-	transition:all .5s;
+	cursor: pointer;
+	text-decoration: none;
+	-webkit-transition: all .5s;
+	transition: all .5s;
 }
 
 a:hover {
-	color:#16a085;
-	text-decoration:underline;
+	color: #16a085;
+	text-decoration: underline;
 }
 
 /* Identifiers */
+
 body #lyricsElem {
 	right: 55px;
 	width: 25vw;
@@ -149,7 +142,7 @@ body #saveMenu:before {
 	background-color: black;
 }
 
-body #saveMenu > div {
+body #saveMenu>div {
 	top: 50%;
 	left: 50%;
 	width: 50%;
@@ -162,7 +155,7 @@ body #saveMenu > div {
 	box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
 }
 
-body #saveMenu > div button {
+body #saveMenu>div button {
 	color: white;
 	border: none;
 	cursor: pointer;
@@ -203,7 +196,7 @@ main #main {
 	flex-direction: row;
 }
 
-main #main > div {
+main #main>div {
 	flex: 1;
 	width: 30%;
 	margin: 0 5px;
@@ -218,11 +211,11 @@ main #main div h3 {
 	display: inline;
 }
 
-main #main div > span {
+main #main div>span {
 	font-size: 80%;
 }
 
-main #main div > select {
+main #main div>select {
 	float: right;
 	border: none;
 	padding: 2px;
@@ -232,7 +225,7 @@ main #main div > select {
 main #main button {
 	border: none;
 	cursor: pointer;
-	position: relative;
+	/* position: relative; */
 	background-color: transparent;
 }
 
@@ -253,7 +246,7 @@ main #main button:not(.listElem):hover:before {
 	opacity: 0.15 !important;
 }
 
-main #main > div > hr {
+main #main>div>hr {
 	border-bottom: 1px gray solid;
 }
 
@@ -273,7 +266,6 @@ main #main div div button {
 	background-color: transparent;
 	border-bottom: 1px lightgray solid;
 	transition: background-color .3s ease;
-
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
@@ -408,7 +400,7 @@ main #controls #mainControls div#left #volumePopUp {
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
-main #controls #mainControls div#left #volumePopUp > button {
+main #controls #mainControls div#left #volumePopUp>button {
 	left: 20%;
 	bottom: 5px;
 	position: absolute;
@@ -510,9 +502,26 @@ main #fab:hover {
 	box-shadow: 0 8px 10px rgba(0, 0, 0, 0.3);
 }
 
-
 @media only screen and (max-width: 700px) {
 	main #main button {
 		padding: 0 2%;
 	}
+}
+
+/* Song download */
+
+#songs>button.song[downloaded] {
+	position: relative;
+	background-color: rgba(0, 100, 0, 0.2);
+}
+
+#songs>button.song[downloaded]:after {
+	top: 0;
+	right: 0;
+	content: '✔';
+	display: block;
+	color: black;
+	font-size: 15px;
+	position: absolute;
+	transform: translateY(calc(100% - 15px));
 }
