--- a/WebInterface/Audio/main.css
+++ b/WebInterface/Audio/main.css
@@ -100,6 +100,7 @@ body #lyricsElem {
 	height: 25vw;
 	z-index: 100;
 	bottom: 127px;
+	display: none;
 	position: fixed;
 	overflow-y: scroll;
 	background-color: white;
@@ -107,15 +108,29 @@ body #lyricsElem {
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
 }
 
-body #lyricsElem p {
+body #lyricsElem div p {
 	text-align: left;
+	line-height: 1.5;
 	overscroll-behavior: none;
+}
+
+body #lyricsElem > div > div {
+	width: 100%;
+	height: 100px;
+	display: flex;
+	overflow: hidden;
+	justify-content: center;
 }
 
 body #lyricsElem .ball-scale-multiple {
 	width: 60px;
 	height: 60px;
-	transform: translateX(110%);
+	transform: none;
+}
+
+body #lyricsElem .ball-scale-multiple > div {
+	top: unset;
+	left: unset;
 }
 
 body #saveMenu {
